# minecraft-llm-agents

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md
.agents/: context-index.md
.agents/guardrails/: architecture-rules.md
.agents/workflows/: feature-development.md
.chroma/: chroma.sqlite3
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/scripts/: extract_changelog.py
.github/workflows/: ci.yml  paper.yml  release.yml
bot-gateway/: .eslintrc.cjs  package-lock.json  package.json
bot-gateway/src/: index.js
docs/: API.md  ARCHITECTURE.md  EXPERIMENTS.md  MCP_SCHEMA.md  SETUP_WINDOWS.md  STATUS.md
orchestrator/: pyproject.toml
orchestrator/app/: a2a.py  main.py  mcp.py  memory.py  memory_vec.py  schemas.py
orchestrator/app/adapters/: gateway_client.py
orchestrator/app/routes/: __init__.py  a2a.py
orchestrator/app/schemas/: __init__.py  a2a.py  action.py
orchestrator/mcp_craft_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
orchestrator/tests/: test_a2a.py  test_a2a_api.py  test_a2a_schema.py  test_action_schema.py  test_mcp.py  test_memory.py  test_memory_api.py  test_memory_vec.py  test_memory_vec_batch.py
paper/: main.tex
