[project]
name = "mcp_craft_orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110","uvicorn[standard]>=0.27","pydantic>=2.6","httpx>=0.27","websockets>=12.0","numpy>=1.26","chromadb>=0.5.0","sentence-transformers>=2.6.0"]

[tool.black]
line-length = 100
target-version = ["py311","py313"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","W","I","UP","B","SIM"]
ignore = ["E501"]  # Zeilenlänge von black geregelt
fix = false

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
